--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "Config github.io"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "Categories"
-    url: https://mmistakes.github.io/minimal-mistakes/categories/
+    url: https://Leddly.github.io/categories
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
