--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,10 +18,10 @@ mycat:
   - title: "Kubernetes"
     children:
       - title: "k3s"
-        url: /categories/k3s
+        url: /categories/k3s/
         category: "k3s"
   - title: "Linux"
     children:
       - title: "network"
-        url: /categories/network
+        url: /categories/network/
         category: "network"
