--- a/_config.yml
+++ b/_config.yml
@@ -92,9 +92,9 @@ author:
   location         : "?????"
   email            : "dkrmsl@gmail.com"
   links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:dkrmsl@gmail.com"
+    # - label: "Email"
+    #   icon: "fas fa-fw fa-envelope-square"
+    #   url: "mailto:dkrmsl@gmail.com"
     # - label: "Website"
     #   icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
@@ -280,18 +280,18 @@ defaults:
       layout: single
       author_profile: false
       share: true
-  # - scope:
-  #     path: ""
-  #     type: mycat
-  #   values:
-  #     layout: single
-  #     author_profile: true
-  #     read_time: true
-  #     comments: true
-  #     share: true
-  #     related: true
-  #     mathjax: true
-  #     sidebar_main: true
+  - scope:
+      path: "_pages/categories"
+      type: categories
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+      mathjax: true
+      sidebar_main: true
 
 collections:
   portfolio:
